<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tomawatchi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- NAME YOUR PET SCREEN -->
    <string name="tomawatchi">Tomawatchi</string>
    <string name="name_your">Name your Tomawatchi!</string>
    <string name="name">Name</string>
    <string name="done">Done!</string>

    <!-- PET SCREEN -->
    <string name="today">Today</string>
    <string name="health_average">Health Average</string>
    <string name="daily_average">Daily Average</string>
    <string name="detail_total_steps">Total (Birth-Today)</string>
    <string name="birthday">Birthday / Age</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- ABOUT SCREEN -->
    <string name="about_us">Chris Thoma, Steven Bishop, &amp; Tes Tabilas</string>
    <string name="about_made_by">Made By</string>
    <string name="about_contact">Contact</string>
    <string name="about_description">Keep fit by walking your Tomawatchi. Don\'t forget to feed and bathe your pet too!</string>

</resources>
