<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.christhoma.tomawatchi.activity.AboutActivity"
    android:orientation="vertical">
    <TextView
        style="@style/PetDetailItemTitle"
        android:text="@string/tomawatchi"/>
    <TextView
        style="@style/PetDetailItem"
        android:id="@+id/about_explanation"
        android:text="@string/about_description"/>
    <View
        style="@style/PetDetailDivider"/>
    <TextView
        style="@style/PetDetailItemTitle"
        android:text="@string/about_contact"/>
    <TextView
        style="@style/PetDetailItem"
        android:id="@+id/about_contact_email"/>
    <View
        style="@style/PetDetailDivider"/>
    <TextView
        style="@style/PetDetailItemTitle"
        android:text="@string/about_made_by"/>
    <TextView
        style="@style/PetDetailItem"
        android:text="@string/about_us"/>
    <View
        style="@style/PetDetailDivider"/>


</LinearLayout>
