<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:isScrollContainer="false"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <oak.widget.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"
            android:paddingBottom="50dp"
            android:text="@string/tomawatchi"
            android:textSize="48sp"
            app:oakFont="HipsterishFontNormal.ttf" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_character" />

        <oak.widget.TextViewWithFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/name_your"
            android:paddingBottom="@dimen/double_default_margin"/>

        <oak.widget.CancelEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:ellipsize="start"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:hint="@string/name"
            android:maxLines="1"
            android:singleLine="true"/>

        <View
            android:layout_height="@dimen/double_default_margin"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn"
            android:text="@string/done" />

    </LinearLayout>

</ScrollView>
