<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.christhoma.tomawatchi.activity.PetDetailActivity">

    <oak.widget.TextViewWithFont
        style="@style/PetDetailItemTitle"
        android:text="@string/name" />

    <oak.widget.TextViewWithFont
        android:id="@+id/detail_pet_name"
        style="@style/PetDetailItem" />

    <View style="@style/PetDetailDivider" />

    <oak.widget.TextViewWithFont
        style="@style/PetDetailItemTitle"
        android:text="@string/birthday" />

    <oak.widget.TextViewWithFont
        android:id="@+id/detail_pet_birthday"
        style="@style/PetDetailItem" />

    <View style="@style/PetDetailDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <oak.widget.TextViewWithFont
            android:id="@+id/detail_total_steps_title"
            style="@style/PetDetailItemTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/detail_total_steps" />

        <oak.widget.TextViewWithFont
            android:id="@+id/detail_average_steps_title"
            style="@style/PetDetailItemTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/daily_average" />

        <oak.widget.TextViewWithFont
            android:id="@+id/detail_today_steps_title"
            style="@style/PetDetailItemTitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/today" />

        <oak.widget.TextViewWithFont
            android:id="@+id/detail_total_steps"
            style="@style/PetDetailItem"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/detail_total_steps_title" />

        <oak.widget.TextViewWithFont
            android:id="@+id/detail_average_steps"
            style="@style/PetDetailItem"
            android:layout_below="@id/detail_average_steps_title"
            android:layout_centerHorizontal="true" />

        <oak.widget.TextViewWithFont
            android:id="@+id/detail_today_steps"
            style="@style/PetDetailItem"
            android:layout_alignParentRight="true"
            android:layout_below="@id/detail_today_steps_title" />
    </RelativeLayout>

    <View style="@style/PetDetailDivider" />

    <RelativeLayout
        android:id="@+id/health_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <oak.widget.TextViewWithFont
            android:id="@+id/detail_health_average"
            style="@style/PetDetailItemTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/health_average" />

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/detail_health_average_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/quarter_default_margin"
            android:layout_below="@id/detail_health_average"
            android:layout_alignParentLeft="true">

        </LinearLayout>

        <oak.widget.TextViewWithFont
            android:id="@+id/detail_today_health"
            style="@style/PetDetailItemTitle"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/today" />

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/detail_health_today_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/quarter_default_margin"
            android:layout_below="@id/detail_today_health"
            android:layout_alignParentRight="true">

        </LinearLayout>
    </RelativeLayout>

    <View
        style="@style/PetDetailDivider"/>


</LinearLayout>
